chore(cms): simplify editable fields

--- a/_data/el/therapy_cove.yml
+++ b/_data/el/therapy_cove.yml
@@ -104,11 +104,10 @@ approaches:
         src: "/assets/images/find-the-best-therapist.jpg"
         alt: "Βρες τον κατάλληλο ψυχοθεραπευτή"
 
-contact_intro:
-  eyebrow: "Επικοινωνία"
-  heading: "Επικοινώνησε μαζί μας για να μάθεις περισσότερες λεπτομέρειες για την διάρκεια και το κόστος των συνεδριών μας."
-
 contact:
+  intro:
+    eyebrow: "Επικοινωνία"
+    heading: "Επικοινώνησε μαζί μας για να μάθεις περισσότερες λεπτομέρειες για την διάρκεια και το κόστος των συνεδριών μας."
   heading: "Στοιχεία επικοινωνίας"
   email_label: "Email"
   phone_label: "Τηλέφωνο"
