fix(assets): track flowbite bundle

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ruby & Bundler
 .bundle/
 vendor/
+!assets/vendor/
+!assets/vendor/flowbite/
+!assets/vendor/flowbite/flowbite.min.js
 
 # Dependency directories
 node_modules/
