style(content): italicize therapist quotes

--- a/_data/el/therapy_cove.yml
+++ b/_data/el/therapy_cove.yml
@@ -23,7 +23,7 @@ site_nav:
 hero:
   heading: "Ένας χώρος για σένα"
   lead: |
-    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη. Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη μεταξύ άλλων. Επιπλέον το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους. Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών. O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
+    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη. Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες, τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη, μεταξύ άλλων. Επιπλέον το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους. Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών. O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
   primary_cta:
     label: "Ο χώρος"
     href: "#space"
@@ -58,9 +58,9 @@ therapists:
       image: "/assets/images/therapist-artemis-rentoumi.jpg"
       alt: "Αρτεμις Ρεντούμη"
       bio: |
-        Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη λειτουργεία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που ξεκινά πάντα με την θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της είναι θετική και σε αρμονία με την ΛΟΑΤΚΙ+ κοινότητα.
+        Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη λειτουργία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που ξεκινά πάντα με την θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της είναι θετική και σε αρμονία με την ΛΟΑΤΚΙ+ κοινότητα.
 
-        > «Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε θεραπευόμενου»
+        > *«Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε θεραπευόμενου»*
     - name: "Βιβιάνα Κούκου"
       role: "Κοινωνική λειτουργός - Ψυχοθεραπεύτρια"
       image: "/assets/images/therapist-viviana-koukou.jpg"
@@ -68,7 +68,7 @@ therapists:
       bio: |
         Μέλος του Therapy Cove. Ξεκινώντας από την ψυχική υποστήριξη προς ευάλωτους πληθυσμούς μέσα από συνεργασίες με ελληνικούς και διεθνείς οργανισμούς, σήμερα εργάζεται ως ψυχοθεραπεύτρια ενηλίκων, συνοδεύοντας ανθρώπους που επιθυμούν να μπουν σε μια διαδικασία προσωπικής ανάλυσης και ψυχικής εμβάθυνσης, αλλά και σε πιο συγκεκριμένα αιτήματα, όπως ζητήματα σχέσεων, άγχους, ψυχικών διαταραχών, νευροαναπτυξιακών διαταραχών, και εσωτερικών συγκρούσεων.
 
-        > «Όταν κάποιος νιώθει ότι γίνεται ουσιαστικά κατανοητός, μπορεί σταδιακά να απελευθερωθεί από ενοχές, φόβους και περιοριστικά μοτίβα, και να καλλιεργήσει μια πιο ουσιαστική σχέση με τον εαυτό του και τους άλλους.»
+        > *«Όταν κάποιος νιώθει ότι γίνεται ουσιαστικά κατανοητός, μπορεί σταδιακά να απελευθερωθεί από ενοχές, φόβους και περιοριστικά μοτίβα, και να καλλιεργήσει μια πιο ουσιαστική σχέση με τον εαυτό του και τους άλλους.»*
     - name: "Εβελίνα Μουστάκα"
       role: "Ψυχολόγος - Ψυχοθεραπεύτρια"
       image: "/assets/images/therapist-evelina-moustaka.jpg"
@@ -78,7 +78,7 @@ therapists:
 
         Υπήρξε εθελόντρια στην πανελλαδική γραμμή ψυχοκοινωνικής υποστήριξης 10306 παρέχοντας ψυχολογικές υπηρεσίες και τακτική συνεργάτης διαφόρων ΜΚΟ συμμετέχοντας σε δράσεις για την ευαισθητοποίηση σε θέματα ψυχικής υγείας και οργάνωση ομάδων ενδυνάμωσης κοινωνικών δεξιοτήτων.
 
-        > «Η επιτυχία του έργου μας είναι όταν ο θεραπευόμενος δεν προσπαθεί να καταπιέζεται ή να αποφεύγει αλλά να μαθαίνει να αποδέχεται τον εαυτό του και να εστιάζει σε ό,τι έχει αξία και νόημα για το ίδιο.»
+        > *«Η επιτυχία του έργου μας είναι όταν ο θεραπευόμενος δεν προσπαθεί να καταπιέζεται ή να αποφεύγει αλλά να μαθαίνει να αποδέχεται τον εαυτό του και να εστιάζει σε ό,τι έχει αξία και νόημα για το ίδιο.»*
 
 approaches:
   heading: "Ψυχοθεραπευτικές Προσεγγίσεις"
