--- a/_data/en/therapy_cove.yml
+++ b/_data/en/therapy_cove.yml
@@ -59,7 +59,7 @@ therapists:
       bio: |
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
-        > "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+        > *"Lorem ipsum dolor sit amet, consectetur adipiscing elit."*
     - name: "Viviana Koukou"
       role: "Social worker - Psychotherapist"
       image: "/assets/images/therapist-viviana-koukou.jpg"
@@ -67,7 +67,7 @@ therapists:
       bio: |
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 
-        > "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+        > *"Lorem ipsum dolor sit amet, consectetur adipiscing elit."*
     - name: "Evelina Moustaka"
       role: "Psychologist - Psychotherapist"
       image: "/assets/images/therapist-evelina-moustaka.jpg"
@@ -75,7 +75,7 @@ therapists:
       bio: |
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-        > "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+        > *"Lorem ipsum dolor sit amet, consectetur adipiscing elit."*
 
 approaches:
   heading: "Psychotherapy approaches"
