--- a/_data/el/therapy_cove.yml
+++ b/_data/el/therapy_cove.yml
@@ -23,7 +23,7 @@ site_nav:
 hero:
   heading: "Ένας χώρος για σένα"
   lead: |
-    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη. Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες, τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη, μεταξύ άλλων. Επιπλέον το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους. Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών. O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
+    Το **Therapy Cove** είναι ένα μοντέρνο κέντρο και εκπαιδευτήριο ψυχικής υγείας, ανοιχτό προς όλους όσους έχουν ανάγκη για υποστήριξη. Στελεχωμένο από καταξιωμένους ψυχολόγους και θεραπευτές με πολυετή εμπειρία στο χώρο, το κέντρο ειδικεύεται σε ζητήματα που αφορούν τους νέους, τους γονείς, τις οικογένειες, τις σχέσεις, το άγχος, τις διαταραχές και την προσωπική ανάπτυξη, μεταξύ άλλων. Επιπλέον, το κέντρο στηρίζει τους ασκούμενους και εκπαιδευόμενους θεραπευτές που αναζητούν έναν επαγγελματικό χώρο που ενισχύει το έργο τους. Εκπαιδευτικά σεμινάρια, χώρος άσκησης επαγγέλματος, ευκαιρίες πρακτικής άσκησης και υποστήριξης από καταξιωμένους επαγγελματίες είναι στη διάθεση τους για την ανάπτυξη της νέας γενιάς θεραπευτών. O χώρος και οι υπηρεσίες του Therapy Cove είναι ανοιχτοί προς όλους τους ενήλικες, ανεξαρτήτως ανάγκης, ταυτότητας ή ψυχοθεραπευτικού υπόβαθρου.
   primary_cta:
     label: "Ο χώρος"
     href: "#space"
@@ -39,7 +39,7 @@ audiences:
   clients:
     heading: "Για θεραπευόμενους"
     body: |
-      Η ομάδα θεραπευτών του Therapy Cove παρέχουν υπηρεσίες ψυχολογικής υποστήριξης και θεραπείας με βάση την συνθετική προσέγγιση, καλύπτοντας έτσι ένα ευρύτατο φάσμα προσεγγίσεων/συστημάτων που τροποποιείται ανάλογα με τις ανάγκες του θεραπευόμενου.
+      Η ομάδα θεραπευτών του Therapy Cove παρέχουν υπηρεσίες ψυχολογικής υποστήριξης και θεραπείας με βάση τη συνθετική προσέγγιση, καλύπτοντας έτσι ένα ευρύτατο φάσμα προσεγγίσεων/συστημάτων που τροποποιείται ανάλογα με τις ανάγκες του θεραπευόμενου.
 
       Οι συνεδρίες είναι ατομικές, ομαδικές ή ανά ζευγάρι.
       Η διάρκεια της εκάστοτε συνεδρίας διαρκεί περίπου 50 λεπτά.
@@ -58,7 +58,7 @@ therapists:
       image: "/assets/images/therapist-artemis-rentoumi.jpg"
       alt: "Αρτεμις Ρεντούμη"
       bio: |
-        Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη λειτουργία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που ξεκινά πάντα με την θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της είναι θετική και σε αρμονία με την ΛΟΑΤΚΙ+ κοινότητα.
+        Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη λειτουργία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που ξεκινά πάντα με τη θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της είναι θετική και σε αρμονία με τη ΛΟΑΤΚΙ+ κοινότητα.
 
         > *«Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε θεραπευόμενου»*
     - name: "Βιβιάνα Κούκου"
@@ -74,7 +74,7 @@ therapists:
       image: "/assets/images/therapist-evelina-moustaka.jpg"
       alt: "Εβελίνα Μουστάκα"
       bio: |
-        Μέλος του Therapy Cove. Μετά την ολοκλήρωση των σπουδών της που εστίασαν σε διάφορους τομείς όπως το στρες και τη προαγωγή της υγείας, την Γνωσιακή-Συμπεριφοριστική Θεραπεία (CBT) και την Θεραπεία Αποδοχής και Δέσμευσης (ACT), μεταξύ άλλων, συνεργάστηκε με το Ινστιτούτο Έρευνας και Θεραπείας της Συμπεριφοράς.
+        Μέλος του Therapy Cove. Μετά την ολοκλήρωση των σπουδών της που εστίασαν σε διάφορους τομείς όπως το στρες και την προαγωγή της υγείας, τη Γνωσιακή-Συμπεριφοριστική Θεραπεία (CBT) και τη Θεραπεία Αποδοχής και Δέσμευσης (ACT), μεταξύ άλλων, συνεργάστηκε με το Ινστιτούτο Έρευνας και Θεραπείας της Συμπεριφοράς.
 
         Υπήρξε εθελόντρια στην πανελλαδική γραμμή ψυχοκοινωνικής υποστήριξης 10306 παρέχοντας ψυχολογικές υπηρεσίες και τακτική συνεργάτης διαφόρων ΜΚΟ συμμετέχοντας σε δράσεις για την ευαισθητοποίηση σε θέματα ψυχικής υγείας και οργάνωση ομάδων ενδυνάμωσης κοινωνικών δεξιοτήτων.
 
@@ -107,7 +107,7 @@ approaches:
 contact:
   intro:
     eyebrow: "Επικοινωνία"
-    heading: "Επικοινώνησε μαζί μας για να μάθεις περισσότερες λεπτομέρειες για την διάρκεια και το κόστος των συνεδριών μας."
+    heading: "Επικοινώνησε μαζί μας για να μάθεις περισσότερες λεπτομέρειες για τη διάρκεια και το κόστος των συνεδριών μας."
   heading: "Στοιχεία επικοινωνίας"
   email_label: "Email"
   phone_label: "Τηλέφωνο"
@@ -118,13 +118,13 @@ contact:
   address: "Καρνεαδου 23, Αθήνα"
   address_map_url: "https://www.google.com/maps/search/?api=1&query=Therapy%20Cove%2C%20Karneadou%2023%2C%20Athina%2010675%2C%20Greece&query_place_id=ChIJPfN08TS9oRQRzCUSGS0TR_E"
   form:
-    name_label: "Ονοματεπωνυμο"
+    name_label: "Ονοματεπώνυμο"
     email_label: "Email"
     message_label: "Μήνυμα"
     submit_label: "Αποστολή"
     messages:
       invalid: "Παρακαλούμε συμπλήρωσε σωστά τα πεδία."
-      pending: "Αποστολή..."
+      pending: "Αποστολή…"
       success: "Το μήνυμα στάλθηκε. Θα επικοινωνήσουμε σύντομα."
       error: "Παρουσιάστηκε σφάλμα. Δοκιμάστε ξανά."
       send_error: "Δεν ήταν δυνατή η αποστολή. Δοκιμάστε ξανά."
