--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "flowbite": "^4.0.1",
+    "lightningcss-cli": "^1.31.1",
     "tailwindcss": "^4.1.18"
   },
   "scripts": {
+    "build:css": "lightningcss --minify --bundle assets/css/site.css -o assets/css/site.bundle.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
