--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "flowbite": "^4.0.1",
+    "husky": "^9.1.7",
     "lightningcss-cli": "^1.31.1",
     "tailwindcss": "^4.1.18"
   },
   "scripts": {
     "build:css": "lightningcss --minify --bundle assets/css/site.css -o assets/css/site.bundle.css",
+    "prepare": "husky",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
