--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ exclude_from_localization:
   - "assets"
   - "admin"
   - "scripts"
+  - "cloudflare"
   - "node_modules"
   - "vendor"
   - ".bundle"
@@ -38,6 +39,7 @@ defaults:
 exclude:
   - ".idea/"
   - "node_modules/"
+  - "cloudflare/"
   - "vendor/"
   - ".bundle/"
   - "Gemfile"
