Update EN • Sections “hero”

--- a/_data/en/cove/hero.yml
+++ b/_data/en/cove/hero.yml
@@ -1,8 +1,8 @@
 heading: A space for you
-lead: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat.
+lead: Lorem ipsum dolor sit amet sit, consectetur adipiscing elit. Sed do
+  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+  commodo consequat.
 primary_cta:
   label: The space
   href: "#space"
