chore(cms): configure decap commit templates and refine Greek site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Therapy Cove
-description: Σύγχρονο κέντρο ψυχολογικής υγείας στην Αθήνα για ενήλικες.
+description: Σύγχρονο κέντρο ψυχικής υγείας στην Αθήνα.
 baseurl: ""
 url: "https://www.therapycove.gr"
 permalink: pretty
