feat(site): add legal notices and switch contact flow to Form.taxi
- add Greek and English legal pages
- add MIT license and asset rights attribution file
- route legal-page navigation anchors to homepage per locale
- wire contact form submission through Form.taxi
- add GDPR disclosure copy next to form submit
- ignore local Wrangler metadata
- make CI link check use local URL config and exclude bot-blocked social URLs

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ exclude_from_localization:
   - "package.json"
   - "package-lock.json"
   - "README.md"
+  - "LICENSE"
+  - "ASSET_RIGHTS.md"
 parallel_localization: false
 defaults:
   - scope:
@@ -51,3 +53,5 @@ exclude:
   - "public/"
   - "locales/"
   - "README.md"
+  - "LICENSE"
+  - "ASSET_RIGHTS.md"
