--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
           ruby-version: "3.4.8"
           bundler-cache: true
       - name: Build site for link check
-        run: bundle exec jekyll build --config _config.yml
+        run: bundle exec jekyll build --config _config.yml,_config.local.yml
         env:
           JEKYLL_ENV: production
       - name: Restore lychee cache
@@ -50,6 +50,8 @@ jobs:
             --exclude "http://127.0.0.1:4000"
             --exclude "http://localhost:4000"
             --exclude "https://www.google.com/maps"
+            --exclude "https://www.linkedin.com"
+            --exclude "https://www.instagram.com"
             "./**/*.html"
           workingDirectory: _site
           failIfEmpty: false
