--- a/_data/gr/cove/therapists/artemis-rentoumi.yml
+++ b/_data/gr/cove/therapists/artemis-rentoumi.yml
@@ -1,8 +1,14 @@
-name: "Αρτεμις Ρεντούμη"
-role: "Ψυχολόγος - Ψυχοθεραπεύτρια"
-image: "/assets/images/therapist-artemis-rentoumi.jpg"
-alt: "Αρτεμις Ρεντούμη"
-bio: |
-  Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη λειτουργία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που ξεκινά πάντα με τη θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της είναι θετική και σε αρμονία με τη ΛΟΑΤΚΙ+ κοινότητα.
+name: Αρτεμις Ρεντούμη
+role: Ψυχολόγος - Ψυχοθεραπεύτρια
+image: /assets/images/therapist-artemis-rentoumi.jpg
+alt: Αρτεμις Ρεντούμη
+bio: >-
+  Ιδρύτρια και συντονίστρια του Therapy Cove, έχοντας αναλάβει την εύρυθμη
+  λειτουργία του χώρου και των συντελεστών του, με πολυετή εμπειρία ως
+  ψυχοθεραπεύτρια και σύμβουλος. Ειδικεύεται στην ψυχοδυναμική, υπαρξιακή και
+  ουμανιστική προσέγγιση, έχοντας δημιουργήσει μια ολιστική προσέγγιση που
+  ξεκινά πάντα με τη θεμελίωση ενός ασφαλούς χώρου θεραπείας. Η προσέγγιση της
+  είναι θετική και σε αρμονία με τη ΛΟΑΤΚΙ+ κοινότητα.
 
-  > *«Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε θεραπευόμενου»*
+
+  > *«Δεν υπάρχει θεραπεία δίχως επικοινωνία και είναι δική μου ευθύνη να μάθω τη γλώσσα κάθε ατόμου σε θεραπεία»*
