--- a/_data/gr/cove/approaches/psychotherapeutic-approaches.yml
+++ b/_data/gr/cove/approaches/psychotherapeutic-approaches.yml
@@ -1,6 +1,10 @@
-title: "Ψυχοθεραπευτικές Προσεγγίσεις"
-description: |
-  Εξερεύνησε διαφορετικά ψυχοθεραπευτικά ρεύματα και προσεγγίσεις, όπως η Γνωσιακή-Συμπεριφορική Θεραπεία (CBT), η Ψυχοδυναμική Θεραπεία, καθώς και οι Υπαρξιακές και Ανθρωπιστικές προσεγγίσεις. Κάθε μοντέλο προσφέρει ένα μοναδικό πλαίσιο κατανόησης της ανθρώπινης εμπειρίας και στήριξης της εσωτερικής διεργασίας του ατόμου, ανάλογα με τις ανάγκες, τις αξίες και τη φάση ζωής του θεραπευόμενου.
+title: Ψυχοθεραπευτικές Προσεγγίσεις
+description: Εξερεύνησε διαφορετικά ψυχοθεραπευτικά ρεύματα και προσεγγίσεις,
+  όπως η Γνωσιακή-Συμπεριφορική Θεραπεία (CBT), η Ψυχοδυναμική Θεραπεία, καθώς
+  και οι Υπαρξιακές και Ανθρωπιστικές προσεγγίσεις. Κάθε μοντέλο προσφέρει ένα
+  μοναδικό πλαίσιο κατανόησης της ανθρώπινης εμπειρίας και στήριξης της
+  εσωτερικής διεργασίας, ανάλογα με τις ανάγκες, τις αξίες και τη φάση ζωής του
+  ατόμου σε θεραπεία.
 image:
-  src: "/assets/images/psychotherapeutic-approaches.jpg"
-  alt: "Ψυχοθεραπευτικές προσεγγίσεις"
+  src: /assets/images/psychotherapeutic-approaches.jpg
+  alt: Ψυχοθεραπευτικές προσεγγίσεις
