docs(content): update GR • Sections/audiences

--- a/_data/gr/cove/audiences.yml
+++ b/_data/gr/cove/audiences.yml
@@ -1,14 +1,24 @@
 intro: ""
 clients:
-  heading: "Για θεραπευόμενους"
-  body: |
-    Η ομάδα θεραπευτών του Therapy Cove παρέχουν υπηρεσίες ψυχολογικής υποστήριξης και θεραπείας με βάση τη συνθετική προσέγγιση, καλύπτοντας έτσι ένα ευρύτατο φάσμα προσεγγίσεων/συστημάτων που τροποποιείται ανάλογα με τις ανάγκες του θεραπευόμενου.
+  heading: Για άτομα που αναζητούν ψυχοθεραπεία
+  body: >-
+    Η ομάδα θεραπευτριών του Therapy Cove παρέχουν υπηρεσίες ψυχολογικής
+    υποστήριξης και θεραπείας με βάση τη συνθετική προσέγγιση, καλύπτοντας έτσι
+    ένα ευρύτατο φάσμα προσεγγίσεων/συστημάτων που τροποποιείται ανάλογα με τις
+    ανάγκες του ατόμου σε θεραπεία.
+
 
     Οι συνεδρίες είναι ατομικές, ομαδικές ή ανά ζευγάρι.
+
     Η διάρκεια της εκάστοτε συνεδρίας διαρκεί περίπου 50 λεπτά.
 therapist:
-  heading: "Για θεραπευτές"
-  body: |
-    Διαπιστευμένοι θεραπευτές μπορούν να εκμεταλλευτούν τον ειδικά διαμορφωμένο χώρο του Therapy Cove για την διεξαγωγή συνεδριών. Η ομάδα του Therapy Cove παρέχει κάθε υποστήριξη και υπηρεσία στους συναδέλφους που αναζητούν χώρο εργασίας και τα μέσα για την εκπλήρωση του λειτουργήματος τους.
+  heading: Για άτομα στον χώρο της ψυχοθεραπείας
+  body: >-
+    Διαπιστευμένοι επαγγελματίες ψυχικής υγείας μπορούν να εκμεταλλευτούν τον
+    ειδικά διαμορφωμένο χώρο του Therapy Cove για την διεξαγωγή συνεδριών. Η
+    ομάδα του Therapy Cove παρέχει κάθε υποστήριξη και υπηρεσία στους
+    συναδέλφους που αναζητούν χώρο εργασίας και τα μέσα για την εκπλήρωση του
+    λειτουργήματος τους.
 
-    Επίσης, φοιτητές και εκπαιδευόμενοι μπορούν να παρακολουθήσουν εκπαιδευτικά προγράμματα και σεμινάρια στο χώρο του Therapy Cove στα πλαίσια της επαγγελματικής τους ανάπτυξης και σταδιοδρομίας.
+
+    Επίσης, άτομα που φοιτούν ή εκπαιδεύονται μπορούν να παρακολουθήσουν εκπαιδευτικά προγράμματα και σεμινάρια στον χώρο του Therapy Cove, στα πλαίσια της επαγγελματικής τους ανάπτυξης και πορείας.
