--- a/_data/en/cove/audiences.yml
+++ b/_data/en/cove/audiences.yml
@@ -1,13 +1,19 @@
 intro: ""
 clients:
-  heading: "For clients"
-  body: |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  heading: For clients
+  body: >-
+    **The Therapy Cove team provides psychological support and therapy services
+    using an integrative approach, drawing from a wide range of methods and
+    approaches that are adapted to the individual needs of each client.**
 
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.
+
+    **Sessions are available individually, in groups, or for couples and typically last around 50 minutes.**
 therapist:
-  heading: "For therapists"
-  body: |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  heading: For therapists
+  body: >
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minim
+    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+    commodo consequat.
+
 
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aute irure dolor in reprehenderit in voluptate velit esse.
